colocando cursor poninter

--- a/src/app/pages/lista/lista.html
+++ b/src/app/pages/lista/lista.html
@@ -11,15 +11,15 @@
     <p>Tarefa: {{tarefas.tarefa}}</p>
   </div>
   <div class="flex py-3 gap-2">
-    <button
-      class="bg-blue-500 text-white px-4 py-2 rounded hover:bg-blue-600"
+    <!-- <button
+      class="bg-blue-500 text-white px-4 py-2 rounded hover:bg-blue-600 cursor-pointer"
       (click)="editarTarefa(tarefas)"
     >
       Editar
-    </button>
+    </button> -->
 
     <button
-      class="bg-red-500 text-white px-4 py-2 rounded hover:bg-red-600"
+      class="bg-red-500 text-white px-4 py-2 rounded hover:bg-red-600 cursor-pointer"
       (click)="deleteTarefa(tarefas)"
     >
       Remover
