--- a/src/app/pages/lista/lista.html
+++ b/src/app/pages/lista/lista.html
@@ -1,12 +1,13 @@
 @for(tarefas of tarefas; track tarefas){
 <div
+  (dblclick)="onConcluido(tarefas)"
   class="cursor-pointer p-2.5 bg-white border border-gray-200 rounded-lg shadow-md mb-4 flex justify-between"
 >
   @if(tarefas.concluido){
   <mat-icon class="custom-icon">done_outline</mat-icon>
 
   }
-  <div class="p-2.5" (dblclick)="onConcluido(tarefas)">
+  <div class="p-2.5">
     <p>{{tarefas.nome}}</p>
     <p>Tarefa: {{tarefas.tarefa}}</p>
   </div>
